AC_INIT(rlm_eap_tnc.c)
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_eap_tnc])

eap_tnc_cflags=
eap_tnc_ldflags=-lnaaeap

if test x$with_[]modname != xno; then

	AC_CHECK_LIB(naaeap,processEAPTNCData,,fail="$fail -lnaaeap",)
	if test -x"$ac_cv_lib_NAAEAP_processEAPTNCData" == -x"no"; then
		AC_MSG_WARN([the NAAEAP library was not found!])
		fail="$fail -lNAAEAP"
	fi
	
	AC_CHECK_HEADERS(naaeap/naaeap.h,,fail="$fail -Inaaeap.h",)
	if test -x"$ac_cv_header_naaeap_h" == -x"no"; then
		AC_MSG_WARN([the naaeap header was not found!])
		fail="$fail -Inaaeap.h"
	fi

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

dnl  Don't change this section.
if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]); 
		targetname=""
	fi
fi

AC_SUBST(eap_tnc_cflags)
AC_SUBST(eap_tnc_ldflags)

AC_SUBST(targetname)
AC_OUTPUT(Makefile)
